--- a/src/app/components/auth/register/register.component.less
+++ b/src/app/components/auth/register/register.component.less
@@ -16,16 +16,11 @@
 
 :host ::ng-deep {
     .p-password,
+    .p-password input,
     .p-inputtext {
         width: 100%;
         border-radius: 7px;
         height: 40px;
-    }
-    input {
-        height: 40px;
-    }
-    .p-password input {
-        border: solid 1px #fff;
     }
 }
 //responsive
