--- a/src/app/components/auth/forgot-password/forgot-password.component.html
+++ b/src/app/components/auth/forgot-password/forgot-password.component.html
@@ -38,12 +38,11 @@
                 <form *ngIf="email"
                     class="login_container_form d-flex flex-column col-12 col-sm-6 col-lg-3 p-4 rounded-2"
                     [formGroup]="validateForm" (ngSubmit)="sendOTP()">
-                    <h4>Reset your password?</h4>
+                    <h4>Reset your password</h4>
                     <span class="my-4">
                         <h6>OTP</h6>
-
-                        <input class="w-full md:w-30rem mb-5" name="emailInput" type="email" pInputText
-                            formControlName="otp" (focus)="clearErrorNotification()" autocomplete="false" />
+                        <input class="w-full md:w-30rem mb-5 ps-2" pInputText type="text" formControlName="otp"
+                            (focus)="clearErrorNotification()" autocomplete="off" />
                         <div *ngIf="isSubmitted">
                             <small class="text-danger" *ngIf="validateForm.get('otp')?.hasError('required')">OTP is
                                 required</small>
@@ -52,7 +51,8 @@
                     <span class="mb-1">
                         <h6>New Password</h6>
                         <p-password class="inputtext w-100 mt-1 form-control" [toggleMask]="true"
-                            formControlName="newPassword" (focus)="clearErrorNotification()" [feedback]="false">
+                            formControlName="newPassword" (focus)="clearErrorNotification()" [feedback]="false"
+                            autocomplete="off">
                         </p-password>
                         <div *ngIf="isSubmitted">
                             <small class="text-danger" *ngIf="
