--- a/src/app/components/merchant-pages/product/product.component.html
+++ b/src/app/components/merchant-pages/product/product.component.html
@@ -86,7 +86,7 @@
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-product>
-                    <tr>
+                    <tr *ngIf="!isLoading">
                         <td style="width: 24%; min-width: 10rem">
                             <span class="p-column-title">Name</span>
                             {{ product.name }}
@@ -119,6 +119,36 @@
                                     class="p-button-rounded p-button-success mr-2"
                                     (click)="onRowSelect(product)"></button>
                             </div>
+                        </td>
+                    </tr>
+                    <tr *ngIf="isLoading">
+                        <td style="width: 24%; min-width: 10rem">
+                            <p-skeleton></p-skeleton>
+                        </td>
+                        <td style="width: 14%; min-width: 10rem">
+                            <p-skeleton></p-skeleton>
+
+                        </td>
+                        <td>
+                            <p-skeleton></p-skeleton>
+
+                        </td>
+                        <td style="width: 14%; min-width: 8rem">
+                            <p-skeleton></p-skeleton>
+
+                        </td>
+                        <td style="width: 14%; min-width: 10rem">
+                            <p-skeleton></p-skeleton>
+
+                        </td>
+                        <td style="width: 14%; min-width: 10rem">
+                            <p-skeleton></p-skeleton>
+
+                        </td>
+
+                        <td>
+                            <p-skeleton></p-skeleton>
+
                         </td>
                     </tr>
                 </ng-template>
