--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,1 +1,47 @@
-<p>footer works!</p>
+<div class="container-fluid py-5">
+    <div class="logo">
+        <app-logo></app-logo>
+    </div>
+    <div class="about-us p-2">
+        <p-divider align="left">
+            <div class="inline-flex align-items-center fw-medium">
+                <b>About us</b>
+            </div>
+        </p-divider>
+        <p class="fw-medium">
+            We provide you a large of High Quality Product for your pet. Join with us
+            to find more ...
+        </p>
+    </div>
+    <div class="contact">
+        <p-divider align="left">
+            <div class="inline-flex align-items-center fw-medium">
+                <b>Payment & Delivery</b>
+            </div>
+        </p-divider>
+        <div class="info d-flex gap-2 flex-wrap">
+            <img src="/assets/ghn.jpg" alt="">
+            <img src="/assets/vnpay.jpg" alt="">
+        </div>
+    </div>
+    <div class="contact">
+        <p-divider align="left">
+            <div class="inline-flex align-items-center fw-medium">
+                <b>Contact</b>
+            </div>
+        </p-divider>
+        <div>
+            <i class="bi bi-envelope-fill"></i>
+            <a href="mailto:pescue.org@gmail.com" class="fw-medium">pescue.org@gmail.com</a>
+        </div>
+        <div>
+            <i class="bi bi-telephone-fill"></i>
+            <a class="fw-medium">(+84) 902 309 287</a>
+        </div>
+        <div>
+            <i class="bi bi-geo-alt-fill"></i>
+            <a href="https://goo.gl/maps/t8SRcZBMmS2NmawQ6" class="fw-medium">
+                Ho Chi Minh city, Viet Nam</a>
+        </div>
+    </div>
+</div>
