--- a/src/app/components/user-pages/landing/landing.component.html
+++ b/src/app/components/user-pages/landing/landing.component.html
@@ -31,11 +31,11 @@
 
 
         <h2>Recommended product for you</h2>
-        <section class="recommended-live" style="height: 380px;">
+        <section class="recommended-prod">
             <swiper-container class="mySwiper" navigation="true" space-between="30" autoplay-delay="3500" rewind="true"
                 autoplay-disable-on-interaction="false" slides-per-view="5">
                 <swiper-slide *ngFor="let item of mostProd" class="live-slide cursor-pointer"
-                    (click)="onProdClick(item.productId)">
+                    (click)="onProdClick(item.productId)" style="height: 380px;">
                     <app-product-card class="my-2" [product]="item"></app-product-card>
                 </swiper-slide>
                 <div class="autoplay-progress" slot="container-end">
@@ -47,7 +47,7 @@
             </swiper-container>
 
         </section>
-        <h2>Recommended live channels</h2>
+        <h2>Live channels</h2>
         <section class="recommended-live">
             <swiper-container class="mySwiper" navigation="true" space-between="30" autoplay-delay="3500" rewind="true"
                 autoplay-disable-on-interaction="false" slides-per-view="3">
