--- a/src/app/components/user-pages/product-detail/product-detail.component.html
+++ b/src/app/components/user-pages/product-detail/product-detail.component.html
@@ -87,7 +87,7 @@
             </div>
         </div>
     </div>
-    <div class="mt-4">
+    <div class="mt-4 card">
         <p-tabView>
             <p-tabPanel header="Product Details">
                 <p style="font-size: 20px;" [innerHTML]="product.detail">
