--- a/src/app/components/merchant-pages/merchant/merchant-detail/merchant-detail.component.html
+++ b/src/app/components/merchant-pages/merchant/merchant-detail/merchant-detail.component.html
@@ -20,6 +20,10 @@
                     }}
                 </h5>
                 <h5>
+                    <b>Description: </b>
+                    {{ merchantDetail.description }}
+                </h5>
+                <h5>
                     <b>Created Date: </b>
                     {{ merchantDetail.createdDate | date: "dd/MM/yyyy" }}
                 </h5>
