--- a/src/app/components/user-pages/merchant-request/merchant-request.component.html
+++ b/src/app/components/user-pages/merchant-request/merchant-request.component.html
@@ -41,12 +41,12 @@
             </div> -->
             <div class="d-flex justify-content-start w-100">
                 <div class="address-container m-4 my-2 w-100">
-                    <span class="">
+                    <!-- <span class="">
                         <h6 class="mb-1" class="addressLabel p-1 ps-0">
                             Address
                         </h6>
                         <input class="w-100 rounded-2 p-2 mb-3" type="text" pInputText formControlName="address" />
-                    </span>
+                    </span> -->
                     <span class="">
                         <h6 class="mb-1" class="addressLabel p-1 ps-0">City</h6>
                         <p-dropdown [options]="listProvince" [filter]="true" [autoDisplayFirst]="false"
