--- a/src/app/components/user-pages/shop-view/shop-view.component.html
+++ b/src/app/components/user-pages/shop-view/shop-view.component.html
@@ -65,8 +65,7 @@
         </div>
     </div>
     <div class="shopView-list col-sm-12 col-md-10" infinite-scroll [infiniteScrollDistance]="scrollDistance"
-        [infiniteScrollUpDistance]="scrollUpDistance" [infiniteScrollThrottle]="throttle"
-        (scrolled)="onScrollDown($event)">
+        [infiniteScrollUpDistance]="scrollUpDistance" [infiniteScrollThrottle]="throttle" (scrolled)="onScrollDown()">
         <div *ngIf="!isLoading; else loading" class="w-100 shopView-list">
             <app-product-card *ngFor="let product of products" [product]="product" class="product"></app-product-card>
             <div *ngIf="isLoadingMore"><app-product-card *ngFor="let _ of [].constructor(size)"
