--- a/src/app/components/user-pages/user-profile/user-profile.component.html
+++ b/src/app/components/user-pages/user-profile/user-profile.component.html
@@ -98,7 +98,7 @@
                             <p-tabView>
                                 <p-tabPanel header="All">
                                     <p-table #dt [value]="listTransactions" [rows]="5" [paginator]="true"
-                                        [tableStyle]="{ 'min-width': '75rem' }" [rowHover]="true" dataKey="id"
+                                        [tableStyle]="{ 'width': '100%' }" [rowHover]="true" dataKey="id"
                                         styleClass="p-datatable-striped" [tableStyle]="{ 'min-width': '25rem' }">
                                         <ng-template pTemplate="header">
                                             <tr class="py-5">
@@ -123,7 +123,7 @@
                                             </tr>
                                         </ng-template>
                                         <ng-template pTemplate="body" let-invoice>
-                                            <tr (click)="onRowSelect(invoice)" style="cursor: pointer">
+                                            <tr style="cursor: pointer">
                                                 <td class="ps-4">
                                                     {{ invoice.invoiceId || invoice.liveInvoiceId }}
                                                 </td>
@@ -142,22 +142,25 @@
                                                         [severity]="getSeverity(invoice.status)"></p-tag>
                                                 </td>
                                                 <td>
-                                                    <p-button *ngIf="
-                                                              invoice.status === 'PENDING' ||
-                                                              invoice.status === 'CANCEL'
-                                                            " styleClass="p-button-secondary" label="Contact"
-                                                        (onClick)="$event.stopPropagation(); contactAdmin(invoice)"></p-button>
+                                                    <button pButton pRipple icon="pi pi-eye"
+                                                        class="p-button-rounded p-button-info mr-2"
+                                                        (click)="onRowSelect(invoice)" pTooltip="Detail"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
                                     </p-table>
 
                                     <hr *ngIf="cart" class="mt-4" />
-                                    <div *ngIf="selectedInvoice" class="d-flex align-items-center">
-                                        <h4 id='invoice'>Invoice ID: {{selectedInvoice.invoiceId}}</h4>
+                                    <div *ngIf="selectedInvoice" class="d-flex align-items-center gap-4">
+                                        <h4 id='invoice'>Invoice ID: {{selectedInvoice.invoiceId ||
+                                            selectedInvoice.liveInvoiceId}}</h4>
                                         <p-button *ngIf=" cart && selectedInvoice.status === 'PAID'"
                                             styleClass="p-button-secondary" label="Received"
                                             (onClick)="$event.stopPropagation(); updateStatus('COMPLETED')"></p-button>
+                                        <p-button
+                                            *ngIf="selectedInvoice.status === 'PENDING' ||selectedInvoice.status === 'CANCEL'"
+                                            styleClass="p-button-secondary" label="Contact"
+                                            (onClick)="$event.stopPropagation(); contactAdmin(invoice)"></p-button>
                                     </div>
                                     <p-table *ngIf="cart" #dt [value]="cart" responsiveLayout="scroll"
                                         [(selection)]="selectedProducts" dataKey="cartItemId" [rows]="8"
@@ -198,9 +201,8 @@
                                                     {{ product.totalPrice | currency : "VND" }}
                                                 </td>
                                                 <td>
-                                                    <p-button *ngIf="isBought" icon="pi pi-pencil"
-                                                        styleClass="p-button-secondary" label="Review"
-                                                        (onClick)="addRating(product)"></p-button>
+                                                    <p-button icon="pi pi-pencil" styleClass="p-button-secondary"
+                                                        label="Review" (onClick)="addRating(product)"></p-button>
                                                 </td>
                                             </tr>
                                         </ng-template>
