--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,7 @@ $gutter: 1rem; //for primeflex grid system
     width: 20vw;
     background-color: #ff9b00 !important;
     border: none;
+    min-width: fit-content;
     &:active {
         background-color: #ff9b00 !important;
     }
