--- a/src/app/components/merchant-pages/order/order-detail/order-detail.component.html
+++ b/src/app/components/merchant-pages/order/order-detail/order-detail.component.html
@@ -101,7 +101,7 @@
             </td>
             <td style="width: 14%">
                 <span class="p-column-title">Total</span>
-                {{ product.total_price | currency : "VND" }}
+                {{ product.totalPrice | currency : "VND" }}
             </td>
         </tr>
     </ng-template>
